# webnn-polyfill

./: .clang-format  .gitignore  BUILD.gn  DEPS  README.md  build_webnn  build_webnn.bat  package.json  webnn.json
build_overrides/: webnn.gni  webnn_features.gni
build_script/: README.md  bot_config.json  bot_config.json.template  build_webnn.bat  package.json
build_script/src/: FILES.cfg  builder.js  builder_conf.js  make_win32_zip.bat
build_script/tools/: linter.js
examples/: Add.cpp  AveragePool2d.cpp  BUILD.gn  Conv2d.cpp  LeNet.cpp  MatMul.cpp  MaxPool2d.cpp  Mul.cpp  Relu.cpp  Reshape.cpp  SampleUtils.cpp  SampleUtils.h  Softmax.cpp  Transpose.cpp  add.cpp  average_pool2d.cpp  conv2d.cpp  lenet.cpp  matmul.cpp  max_pool2d.cpp  mul.cpp  relu.cpp  reshape.cpp  softmax.cpp  transpose.cpp
examples/LeNet/: LeNet.cpp  LeNet.h  Main.cpp  README.md
generator/: BUILD.gn  dawn_generator.gni  dawn_json_generator.py  generator_lib.py  webnn_generator.gni  webnn_json_generator.py
generator/templates/: dawn_proc.c  dawn_proc_table.h  mock_webgpu.cpp  mock_webgpu.h  mock_webnn.cpp  mock_webnn.h  webgpu.h  webgpu_cpp.cpp  webgpu_cpp.h  webgpu_struct_info.json  webnn.h  webnn_cpp.cpp  webnn_cpp.h  webnn_struct_info.json
generator/templates/dawn_native/: ProcTable.cpp  ValidationUtils.cpp  ValidationUtils.h  wgpu_structs.cpp  wgpu_structs.h  wnn_structs.cpp  wnn_structs.h
generator/templates/dawn_wire/: WireCmd.cpp  WireCmd.h
generator/templates/webnn_native/: ProcTable.cpp  ValidationUtils.cpp  ValidationUtils.h  wnn_structs.cpp  wnn_structs.h
node/: LICENSE  PATH_TO_DAWN  README.md  binding.gyp  build.bat  build.js  build.sh  index.js  node_setup.js  package.json
node/examples/: lenet.mjs  utils.js
node/examples/lenet/: lenet.js  main.mjs
node/examples/lenet_electron/: README.md  index.html  lenet.js  package-lock.json  package.json  pen.js  render.js
node/generator/: index.mjs  types.mjs  utils.mjs
node/generator/generators/: ast.mjs  descriptorDecoder.mjs  gyp.mjs  index.mjs
node/generator/specifications/: 0.0.1.json
node/generator/templates/: DescriptorDecoder-cpp.njk  DescriptorDecoder-h.njk  binding-gyp.njk  index-cpp.njk  index-h.njk
node/lib/: webnn.js
node/src/: Base.h  Compilation.cpp  Compilation.h  Index.cpp  Ml.cpp  Model.cpp  Model.h  ModelBuilder.cpp  NeuralNetworkContext.cpp  NeuralNetworkContext.h  Operand.cpp  Operand.h  compilation.cpp  compilation.h  index.cpp  index.h  ml.cpp  ml.h  model.cpp  model.h  model_builder.cpp  model_builder.h  neural_network_context.cpp  neural_network_context.h  operand.cpp  operand.h  utils.h
node/src/ops/: Constant.cc  Constant.h  Conv2d.cc  Conv2d.h  Input.cc  Input.h  (+26 more)
node/test/: utils.js
scripts/: dawn_features.gni
src/common/: BUILD.gn  SwapChainUtils.h
src/dawn/: BUILD.gn  CMakeLists.txt
src/dawn_native/: BUILD.gn  Compilation.cpp  Compilation.h  DawnNative.cpp  Device.h  Error.cpp  Error.h  ErrorData.h  ErrorScope.cpp  ErrorScope.h  Forward.h  Inputs.cpp  Inputs.h  Instance.h  Model.cpp  Model.h  ModelBuilder.cpp  ModelBuilder.h  NamedInputs.h  NamedOperands.h  NamedOutputs.h  NamedRecords.h  NamedResults.h  NeuralNetworkContext.cpp  NeuralNetworkContext.h  ObjectBase.cpp  ObjectBase.h  Operand.cpp  Operand.h  Outputs.cpp  Outputs.h  Result.cpp  Result.h  dawn_platform.h
src/dawn_native/dml/: CompilationDML.cpp  CompilationDML.h  ModelBuilderDML.cpp  ModelBuilderDML.h  ModelDML.cpp  ModelDML.h  NeuralNetworkContextDML.cpp  NeuralNetworkContextDML.h  compilation_dml.cc  compilation_dml.h  model_builder_dml.cc  model_builder_dml.h  model_dml.cc  model_dml.h  neural_network_context_dml.cc  neural_network_context_dml.h
src/dawn_native/ie/: CompilationIE.cpp  CompilationIE.h  ErrorIE.cpp  ErrorIE.h  ModelBuilderIE.cpp  ModelBuilderIE.h  ModelIE.cpp  ModelIE.h  NeuralNetworkContextIE.cpp  NeuralNetworkContextIE.h  compilation_ie.cc  compilation_ie.h  error_ie.cc  error_ie.h  ienn_symbol_table.h  late_binding_symbol_table.cc  late_binding_symbol_table.h  model_builder_ie.cc  model_builder_ie.h  model_ie.cc  model_ie.h  neural_network_context_ie.cc  neural_network_context_ie.h  operand_ie.cc  operand_ie.h
src/dawn_native/ie/ienn/: CMakeLists.txt  build_ienn_msvc.bat  build_ienn_unix.sh
src/dawn_native/ie/ienn/src/: ie_compilation.cpp  ie_compilation.h  ie_model.cpp  ie_model.h  ie_nn_c_api.cpp  ie_nn_c_api.h  utils.cpp  utils.h
src/dawn_native/ie/ienn_symbol_table/: ienn_symbol_table.cc  ienn_symbol_table.h  late_binding_symbol_table.cc  late_binding_symbol_table.h
src/dawn_native/null/: NeuralNetworkContextNull.cpp  NeuralNetworkContextNull.h  neural_network_context_null.cc  neural_network_context_null.h
src/dawn_native/ops/: Binary.cpp  Binary.h  Constant.cpp  Constant.h  Conv2d.cpp  Conv2d.h  Input.cpp  Input.h  Pool2d.cpp  Pool2d.h  Reshape.h  Transpose.h  Unary.cpp  Unary.h  binary.cc  binary.h  constant.cc  constant.h  conv2d.cc  conv2d.h  input.cc  input.h  matmul.cc  matmul.h  output.cc  output.h  pool2d.cc  pool2d.h  relu.cc  relu.h  reshape.cc  reshape.h  softmax.cc  softmax.h  transpose.cc  transpose.h  unary.cc  unary.h  utils.cc  utils.h
src/tests/: BUILD.gn  DawnTest.cpp  DawnTest.h  WebnnTest.cpp  WebnnTest.h
src/tests/end2end/: AddTests.cpp  AveragePool2dTests.cpp  Conv2dTests.cpp  MatMulTests.cpp  MaxPool2dTests.cpp  MulTests.cpp  Pool2dTests.cpp  ReluTests.cpp  ReshapeTests.cpp  SoftmaxTests.cpp  TransposeTests.cpp
src/tests/unittests/: ObjectBaseTests.cpp
src/tests/unittests/validation/: ErrorScopeValidationTests.cpp  PoolValidationTests.cpp  ValidationTest.cpp  ValidationTest.h
src/webnn/: BUILD.gn
src/webnn_native/: BUILD.gn  Compilation.cpp  Compilation.h  Error.cpp  Error.h  ErrorData.h  ErrorScope.cpp  ErrorScope.h  Model.cpp  Model.h  ModelBuilder.cpp  ModelBuilder.h  NamedRecords.h  NeuralNetworkContext.cpp  NeuralNetworkContext.h  ObjectBase.cpp  ObjectBase.h  Operand.cpp  Operand.h  Result.cpp  Result.h  WebnnNative.cpp  webnn_platform.h
test/: index.html  utils.js
test/models/: resnet50v2_nchw.js
test/ops/: add.js  clamp.js  conv2d.js
(+75 files in other folders)
